--- a/app/src/main/res/layout/activity_cast.xml
+++ b/app/src/main/res/layout/activity_cast.xml
@@ -93,7 +93,7 @@
                     android:layout_marginLeft="32dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="Age "
+                    android:text="Birthday "
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@id/cast_cardView"
