--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.MovieDetailsActivity"
-    android:background="@color/black">
+    android:background="@color/black"
+    tools:context=".activities.MovieDetailsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,44 +30,44 @@
                 android:id="@+id/movie_details_progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:indicatorColor="@color/orange"
                 app:indicatorName="BallPulseIndicator"
                 app:layout_constraintBottom_toBottomOf="@+id/movie_details_imageView"
                 app:layout_constraintEnd_toEndOf="@+id/movie_details_imageView"
                 app:layout_constraintStart_toStartOf="@+id/movie_details_imageView"
-                app:layout_constraintTop_toTopOf="@+id/movie_details_imageView"
-                app:indicatorColor="@color/orange"/>
+                app:layout_constraintTop_toTopOf="@+id/movie_details_imageView" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/movie_details_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/ic_play_arrow"
                 app:fabSize="mini"
-                app:tint="@color/orange"
-                android:layout_margin="20dp"
                 app:layout_constraintBottom_toBottomOf="@+id/movie_details_imageView"
-                app:layout_constraintEnd_toEndOf="@+id/movie_details_imageView" />
+                app:layout_constraintEnd_toEndOf="@+id/movie_details_imageView"
+                app:tint="@color/orange" />
 
             <ImageView
                 android:id="@+id/movie_details_back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 android:src="@drawable/ic_arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white"
-                android:layout_margin="20dp"/>
+                app:tint="@color/white" />
 
             <ImageView
                 android:id="@+id/movie_details_favourite_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 android:src="@drawable/ic_favourite_outlined"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white"
-                android:layout_margin="20dp"/>
+                app:tint="@color/white" />
 
             <TextView
                 android:id="@+id/movie_details_title"
@@ -87,18 +86,18 @@
                 android:id="@+id/movie_details_linear_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_title"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_title">
 
                 <TextView
                     android:id="@+id/movie_details_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="3dp"
-                    android:textColor="@color/grey"/>
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/movie_details_year_separator"
@@ -106,15 +105,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="3dp"
                     android:text="|"
-                    android:visibility="gone"
-                    android:textColor="@color/grey"/>
+                    android:textColor="@color/grey"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/movie_details_genre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="3dp"
-                    android:textColor="@color/grey"/>
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/movie_details_genre_separator"
@@ -122,17 +121,39 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="3dp"
                     android:text="|"
-                    android:visibility="gone"
-                    android:textColor="@color/grey"/>
+                    android:textColor="@color/grey"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/movie_details_duration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="3dp"
-                    android:textColor="@color/grey"/>
+                    android:textColor="@color/grey" />
 
             </LinearLayout>
+            <TextView
+                android:id="@+id/movie_details_rating_default"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="@+id/movie_details_linear_group"
+                android:text="2"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:visibility="visible" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:id="@+id/img_star_rating"
+                app:layout_constraintTop_toTopOf="@+id/movie_details_rating_default"
+                app:layout_constraintBottom_toBottomOf="@+id/movie_details_rating_default"
+                app:layout_constraintStart_toEndOf="@+id/movie_details_rating_default"
+                android:src="@drawable/ic_baseline_star_24"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/movie_details_storyline_heading"
@@ -147,41 +168,18 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_linear_group" />
+                app:layout_constraintTop_toBottomOf="@+id/img_star_rating" />
 
             <TextView
                 android:id="@+id/movie_details_storyline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_storyline_heading"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_margin="10dp"
-                android:textColor="@color/grey"/>
-
-            <TextView
-                android:id="@+id/movie_details_trailer_heading"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:textColor="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_storyline"
-                android:text="Trailer"
-                android:textColor="@color/white"
-                android:textSize="18dp"
-                android:fontFamily="@font/open_sans_condensed_bold"
-                android:visibility="gone"
-                android:layout_marginTop="20dp"
-                android:layout_marginHorizontal="10dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_storyline_heading" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/movie_details_trailer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_trailer_heading"
-                android:overScrollMode="never"/>
 
             <TextView
                 android:id="@+id/movie_details_cast_heading"
@@ -196,40 +194,105 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_trailer" />
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_storyline" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/movie_details_cast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_cast_heading"
-                android:overScrollMode="never"/>
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_cast_heading" />
 
             <TextView
-                android:id="@+id/movie_details_recommended_heading"
+                android:id="@+id/movie_details_rating_heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/open_sans_condensed_bold"
+                android:text="Rating this movie"
+                android:textColor="@color/white"
+                android:textSize="22dp"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_cast"
-                android:text="Recommended"
-                android:textColor="@color/white"
-                android:textSize="18dp"
-                android:visibility="gone"
-                android:fontFamily="@font/open_sans_condensed_bold"
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_cast" />
+
+            <RatingBar
+                android:id="@+id/movie_details_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:background="@color/black"
+                android:numStars="5"
+                android:stepSize="1.0"
+                android:progressBackgroundTint="#424141"
+                android:progressTint="#FFDF00"
+                android:rating="0"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_rating_heading" />
+
+            <ImageView
+                android:id="@+id/acc_img"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginHorizontal="10dp"/>
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_rating"
+                tools:srcCompat="@drawable/ic_outline_account_circle_24" />
+
+            <EditText
+                android:id="@+id/acc_detail_comment"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_button_style_rounded"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Write Comment"
+                android:textColorHint="#2B2B2B"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20dp"
+                android:inputType="textPersonName"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="@+id/acc_img"
+                app:layout_constraintTop_toTopOf="@+id/acc_img"
+                app:layout_constraintStart_toEndOf="@+id/acc_img"
+                app:layout_constraintVertical_bias="1.0"
+                tools:layout_editor_absoluteX="86dp"
+                tools:ignore="MissingConstraints" />
+
+            <Button
+                android:id="@+id/movie_detail_add_comment_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_button_style_rounded"
+                android:text="Add"
+                android:layout_marginLeft="20dp"
+                android:backgroundTint="@color/white"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="@+id/acc_detail_comment"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/acc_detail_comment"
+                app:layout_constraintTop_toTopOf="@+id/acc_detail_comment"
+                app:layout_constraintVertical_bias="0.529" />
+
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/movie_details_recommended"
+                android:id="@+id/movie_details_reviewcomment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
+                android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_details_recommended_heading"
-                android:overScrollMode="never"/>
+                app:layout_constraintTop_toBottomOf="@+id/acc_img" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
