--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -228,7 +228,7 @@
                 android:background="@color/black"
                 android:numStars="5"
                 android:stepSize="1.0"
-                android:progressBackgroundTint="#424141"
+                android:progressBackgroundTint="#FFFFFF"
                 android:progressTint="#FFDF00"
                 android:rating="0"
                 android:visibility="visible"
