--- a/app/src/main/res/layout/row_evaluate.xml
+++ b/app/src/main/res/layout/row_evaluate.xml
@@ -12,9 +12,10 @@
         android:id="@+id/comment_user_img"
         android:layout_width="80dp"
         android:layout_height="90dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rating_star"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -22,12 +23,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#969595"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/comment_user_img"
-        app:layout_constraintTop_toBottomOf="@+id/rating_star" />
+        app:layout_constraintTop_toTopOf="@+id/comment_user_img"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="#969595"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.914"
+        app:layout_constraintStart_toEndOf="@+id/comment_username"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <RatingBar
+        android:id="@+id/ratingBarLoad"
+        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.066"
+        app:layout_constraintStart_toEndOf="@+id/comment_user_img"
+        app:layout_constraintTop_toBottomOf="@+id/comment_username"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/comment_content"
@@ -42,19 +69,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/comment_user_img"
-        app:layout_constraintTop_toBottomOf="@+id/comment_username" />
-
-    <RatingBar
-        android:id="@+id/rating_star"
-        android:layout_width="240dp"
-        android:layout_height="43dp"
-        android:numStars="5"
-        android:progressTint="#FFDF00"
-        android:rating="3.8"
-        android:stepSize="0.5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBarLoad" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
